--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,65 +1,11 @@
-name = "sg77" #todo
+name = "sg777" #todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cf.shopee.co.id.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "shopee.co.id.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cv.shopee.sg.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "quiz.int.vidio.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "quiz.staging.vidio.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "img.email3.vidio.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "edu.ruangguru.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "marketing.ruangguru.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "onelink.seabank.co.id.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cdn.i-joox.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "app.gopay.co.id.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "app.genflix.co.id.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "web.joox.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "dev-cdn.i-joox.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "support.duolingo.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "www.webex.com.sg77.kyrie.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "beta.zoom.us.sg77.kyrie.filegear-sg.me"
+pattern = "sg777.rin.biz.id"
 custom_domain = true
 
 [vars]
