--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,50 +1,71 @@
-name = "idfadz" # todo
+name = "korea" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "idfadz.fadztunnell.my.id"
+pattern = "korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.idfadz.fadztunnell.my.id"
+pattern = "ava.game.naver.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.idfadz.fadztunnell.my.id"
+pattern = "blog.webex.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.idfadz.fadztunnell.my.id"
+pattern = "www.sushiroll.co.id.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.idfadz.fadztunnell.my.id"
+pattern = "blog.sushiroll.co.id.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.idfadz.fadztunnell.my.id"
+pattern = "cdn.appsflyer.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.idfadz.fadztunnell.my.id"
+pattern = "investor.fb.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.idfadz.fadztunnell.my.id"
+pattern = "investor.spotify.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.idfadz.fadztunnell.my.id"
+pattern = "www.joox.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.idfadz.fadztunnell.my.id"
+pattern = "quiz.staging.vidio.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "104.26.6.171.idfadz.fadztunnell.my.id"
+pattern = "zoomcares.zoom.us.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.genflix.co.id.idfadz.fadztunnell.my.id"
+pattern = "graph.facebook.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "104.18.20.226.idfadz.fadztunnell.my.id"
+pattern = "www.help.tinder.com.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "chat.sociomile.com.idfadz.fadztunnell.my.id"
+pattern = "104.16.51.111.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "poe.garena.com.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "games.axis.co.id.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "api.ovo.id.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "edu.udemy.com.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "104.26.6.171.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "app.gopay.co.id.korea.tunneltech.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "app-stg.gopay.co.id.korea.tunneltech.filegear-sg.me"
 custom_domain = true
 
 [vars]
