--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,71 +1,71 @@
-name = "hk" # todo
+name = "hkg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "hk.tunneltech.filegear-sg.me"
+pattern = "hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.hk.tunneltech.filegear-sg.me"
+pattern = "ava.game.naver.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.hk.tunneltech.filegear-sg.me"
+pattern = "blog.webex.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.hk.tunneltech.filegear-sg.me"
+pattern = "www.sushiroll.co.id.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.hk.tunneltech.filegear-sg.me"
+pattern = "blog.sushiroll.co.id.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.hk.tunneltech.filegear-sg.me"
+pattern = "cdn.appsflyer.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.hk.tunneltech.filegear-sg.me"
+pattern = "investor.fb.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.hk.tunneltech.filegear-sg.me"
+pattern = "investor.spotify.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.joox.com.hk.tunneltech.filegear-sg.me"
+pattern = "www.joox.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.hk.tunneltech.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.hk.tunneltech.filegear-sg.me"
+pattern = "zoomcares.zoom.us.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.hk.tunneltech.filegear-sg.me"
+pattern = "graph.facebook.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.help.tinder.com.hk.tunneltech.filegear-sg.me"
+pattern = "www.help.tinder.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "104.16.51.111.hk.tunneltech.filegear-sg.me"
+pattern = "104.16.51.111.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.hk.tunneltech.filegear-sg.me"
+pattern = "poe.garena.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "games.axis.co.id.hk.tunneltech.filegear-sg.me"
+pattern = "games.axis.co.id.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.ovo.id.hk.tunneltech.filegear-sg.me"
+pattern = "api.ovo.id.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.udemy.com.hk.tunneltech.filegear-sg.me"
+pattern = "www.udemy.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "104.26.6.171.hk.tunneltech.filegear-sg.me"
+pattern = "104.26.6.171.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.hk.tunneltech.filegear-sg.me"
+pattern = "app.gopay.co.id.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "go.appsflyer.com.hk.tunneltech.filegear-sg.me"
+pattern = "go.appsflyer.com.hkg.tunneltech.filegear-sg.me"
 custom_domain = true
 
 [vars]
