--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,11 @@
-name = "aofeisg" # todo
+name = "alibabasg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "asg.reinzvpn.my.id"
-custom_domain = true
-[[routes]]
-pattern = "teams.microsoft.com.asg.reinzvpn.my.id"
-custom_domain = true
-[[routes]]
-pattern = "meetings.googleapis.com.asg.reinzvpn.my.id"
+pattern = "alb.reinzvpn.my.id"
 custom_domain = true
 
 [vars]
