--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,11 +5,15 @@ name = "sg" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.sgdo.bjhonstore.my.id"
+pattern = "sg.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.bjhonstore.my.id"
+pattern = "help.viu.com.sg.bjhonstore.my.id"
 custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.sg.bjhonstore.my.id"
+custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
