--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ name = "sg" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg..bjhonstore.my.id"
+pattern = "sg.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
 pattern = "help.viu.com.sg.bjhonstore.my.id"
