--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "sg" # todo
+name = "sg1" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.bjhonstore.my.id"
+pattern = "sg1.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.sg.bjhonstore.my.id"
+pattern = "help.viu.com.sg1.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
