--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,17 @@
-name = "sg" # todo
+name = "akl" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.bjhonstore.my.id"
+pattern = "akl.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.sg.bjhonstore.my.id"
+pattern = "help.viu.com.akl.bjhonstore.my.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.akl.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
