--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,14 @@
-name = "cf-worker-ws-dev" # todo
+name = "indonesia" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indonesia.dyndandim.fun"
+costum_domain = true
+[[routes]]
+pattern ="blog.webex.com.dyndandim.fun"
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +17,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "0c163e66-dad0-4af5-8fd2-439b926a58a5"
+UUID = "33ca7961-2be1-41e2-aaae-3f0b97eac909"
