--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,21 @@ name = "sgp" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "sgp.vip-server.cloud"
+custom_domain = true
+[[routes]]
+pattern = "blog.webex.com.sgp.vip-server.cloud"
+custom_domain = true
+[[routes]]
+pattern = "api.webex.com.sgp.vip-server.cloud"
+custom_domain = true
+[[routes]]
+pattern = "Carrier.webex.com.sgp.vip-server.cloud"
+custom_domain = true
+[[routes]]
+pattern = "Partner.zoom.us.sgp.vip-server.cloud"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
