--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,17 @@
-name = "akl" # todo
+name = "amz" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "akl.bjhonstore.my.id"
+pattern = "amz.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.akl.bjhonstore.my.id"
+pattern = "help.viu.com.amz.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.akl.bjhonstore.my.id"
+pattern = "ava.game.naver.com.amz.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
