--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "mc" # todo
+name = "sg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "mc.kozel-pytack.xyz"
+pattern = "sg.kozel-pytack.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.mc.kozel-pytack.xyz"
+pattern = "blog.webex.com.sg.kozel-pytack.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.mc.kozel-pytack.xyz"
+pattern = "blog.webex.com.sg kozel-pytack.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.mc.kozel-pytack.xyz"
+pattern = "blog.webex.com.sg..kozel-pytack.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.mc.kozel-pytack.xyz"
+pattern = "blog.webex.com.sg.kozel-pytack.xyz"
 custom_domain = true
 
 [vars]
