--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "amazon-xcl" # todo
+name = "oracle-xcl" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amz.taikuda.filegear-sg.me"
+pattern = "orc.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.amz.taikuda.filegear-sg.me"
+pattern = "df.game.naver.com.orc.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.amz.taikuda.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.orc.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "slugger.hangame.com.amz.taikuda.filegear-sg.me"
+pattern = "slugger.hangame.com.orc.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amz.taikuda.filegear-sg.me"
+pattern = "ava.game.naver.com.orc.taikuda.filegear-sg.me"
 custom_domain = true
 
 [vars]
