--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,24 @@
-name = "indo-xcl" # todo
+name = "alibaba-isatedu" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gcp.taikuda.filegear-sg.me"
+[[routes]]
+pattern = "alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.gcp.taikuda.filegear-sg.me"
+pattern = "carrier.webex.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.gcp.taikuda.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "slugger.hangame.com.gcp.taikuda.filegear-sg.me"
+pattern = "api.webex.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.gcp.taikuda.filegear-sg.me"
+pattern = "blog.webex.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
