--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "alibaba-isatedu" # todo
+name = "ali-eduisat" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -6,19 +6,19 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
 [[routes]]
-pattern = "alibaba.crotjanda.filegear-sg.me"
+pattern = "edu1.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "carrier.webex.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "carrier.webex.com.edu1.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.edu1.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.webex.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "api.webex.com.edu1.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.edu1.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
